<resources>
    <string name="app_name">TechCamp</string>
    <string name="home_activity">Home activity</string>
    <string name="type_something">Type something</string>
    <string name="submit">Submit</string>
    <string name="Register">Register</string>
    <string name="already_hav_an_account">I Have An account?</string>
    <string name="Username">Username</string>
    <string name="not_a_member_yet">Create Acount Here</string>
    <string name="Login">Login</string>
    <string name="book_title">Book Title</string>
    <string name="book_category">Book Category</string>
    <string name="description">Description</string>
    <string name="home">Home</string>

</resources>
