<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".BookDetailsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="8dp">

        <ImageView
            android:id="@+id/cover_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/book_title"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/book_category"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_Back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:onClick="review"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />
</LinearLayout>